feat: 執筆・公開ツールチェインの強化と記事修正
- zenn-cli v0.4.5にアップデート
- markdownlint-cli2を導入（Zenn向け設定付き）
- textlintにno-dead-link（リンク切れ検出）とprh（用語統一）を追加
- husky + lint-stagedでcommit時の自動lint
- sharp-cliで画像最適化対応
- publish.pyにQiita記事更新機能（--update auto）を追加
- publish-article/seo-optimizerスキルを追加
- GitHub Actionsにmarkdownlintと画像サイズチェックを追加
- cursor-to-zed記事: CLI並行実行の強みを追記、textlint/markdownlintエラー修正

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,5 +25,24 @@ jobs:
       - name: Run textlint
         run: npm run lint
 
+      - name: Run markdownlint
+        run: npm run lint:md
+
       - name: Validate Zenn articles
         run: npx zenn list:articles
+
+      - name: Check image sizes
+        run: |
+          MAX_SIZE=500000  # 500KB
+          oversized=""
+          for img in images/*; do
+            if [ -f "$img" ]; then
+              size=$(stat -f%z "$img" 2>/dev/null || stat -c%s "$img" 2>/dev/null)
+              if [ "$size" -gt "$MAX_SIZE" ]; then
+                oversized="$oversized\n  $img ($(( size / 1024 ))KB)"
+              fi
+            fi
+          done
+          if [ -n "$oversized" ]; then
+            echo "::warning::Oversized images found (>500KB):$oversized"
+          fi
