--- a/.textlintrc.json
+++ b/.textlintrc.json
@@ -6,6 +6,19 @@
         "max": 6,
         "allow": ["機械学習", "深層学習", "自然言語処理"]
       }
+    },
+    "no-dead-link": {
+      "checkRelative": true,
+      "baseURI": null,
+      "ignore": [
+        "https://localhost*"
+      ],
+      "preferGET": [],
+      "retry": 3,
+      "userAgent": "textlint-rule-no-dead-link/1.0"
+    },
+    "prh": {
+      "rulePaths": ["prh.yml"]
     }
   }
 }
