--- a/package.json
+++ b/package.json
@@ -7,14 +7,40 @@
     "preview": "zenn preview",
     "new:article": "zenn new:article",
     "new:book": "zenn new:book",
-    "lint": "textlint articles/**/*.md books/**/*.md"
+    "lint": "textlint articles/**/*.md books/**/*.md",
+    "lint:md": "markdownlint-cli2 'articles/**/*.md' 'books/**/*.md'",
+    "lint:all": "npm run lint && npm run lint:md",
+    "lint:fix": "textlint --fix articles/**/*.md books/**/*.md",
+    "optimize:images": "sharp --input images/ --output images/ --quality 80 --format png",
+    "prepare": "husky"
   },
-  "keywords": ["zenn", "pdf2anki", "ai", "anki"],
+  "lint-staged": {
+    "articles/**/*.md": [
+      "textlint",
+      "markdownlint-cli2"
+    ],
+    "books/**/*.md": [
+      "textlint",
+      "markdownlint-cli2"
+    ]
+  },
+  "keywords": [
+    "zenn",
+    "pdf2anki",
+    "ai",
+    "anki"
+  ],
   "author": "shimomoto_tatsuya",
   "license": "MIT",
   "devDependencies": {
-    "zenn-cli": "^0.1.158",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
+    "markdownlint-cli2": "^0.20.0",
+    "sharp-cli": "^5.2.0",
     "textlint": "^14.3.1",
-    "textlint-rule-preset-ja-technical-writing": "^10.0.1"
+    "textlint-rule-no-dead-link": "^6.2.1",
+    "textlint-rule-preset-ja-technical-writing": "^10.0.1",
+    "textlint-rule-prh": "^6.1.0",
+    "zenn-cli": "^0.4.5"
   }
 }
