chore: drafts/ と scripts/.python-version を .gitignore に追加
ドラフトや作業メモは公開対象外のためリポジトリから除外する。

--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,12 @@ Thumbs.db
 # Zenn CLI
 .zenn/
 
+# Drafts (working notes, not for publication)
+drafts/
+
 # Python (scripts/)
 scripts/.venv/
 scripts/__pycache__/
 scripts/.env
+scripts/.python-version
 *.pyc
