feat: publish.py に Dev.to / Hashnode 対応を追加し、テストを整備
- Dev.to API v1、Hashnode GraphQL API によるクロスポスト機能を追加
- --canonical-url フラグを追加（SEO 用 canonical URL 指定）
- Hashnode publisher に HTTP ステータスコードチェックを追加（JSONDecodeError 防止）
- Dev.to --update の ID 変換に ValueError ハンドリングを追加
- CLI をプラットフォーム別 runner に分離しディスパッチパターンへリファクタ
- pytest + respx によるテスト 46 件を追加（カバレッジ 85%）
- 記事のコードブロック破損と末尾の不要なフェンスを修正

--- a/scripts/pyproject.toml
+++ b/scripts/pyproject.toml
@@ -7,3 +7,19 @@ dependencies = [
     "httpx>=0.28.1",
     "python-frontmatter>=1.1.0",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.0",
+    "respx>=0.22",
+    "pytest-cov>=6.0",
+]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+
+[tool.coverage.run]
+source = ["publish"]
+
+[tool.coverage.report]
+fail_under = 80
