chore: dead code cleanup — main.py削除、sharp-cli除去、.gitignore整備
- scripts/main.py: 未使用スタブファイルを削除
- sharp-cli: 未使用の画像最適化依存を除去（node_modules 21MB削減）
- package.json: optimize:images スクリプトを削除
- .gitignore: .coverage, .pytest_cache/, *.log を追加

--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,7 @@ scripts/.venv/
 scripts/__pycache__/
 scripts/.env
 scripts/.python-version
+scripts/.coverage
+scripts/.pytest_cache/
+scripts/*.log
 *.pyc
