fix: textlint/markdownlint設定修正と記事のlintエラー全件修正
- markdownlint: Zenn互換のためMD034/MD036/MD014を無効化（コミュニティ調査済み）
- textlint: allowPeriodMarksに「：」追加、dead-link ignoreにdevgenius/medium追加
- textlint-filter-rule-comments導入でZenn :::構文の誤検知を抑制
- prh.yml: 負の先読みで二重適用バグを修正（ユーザー→ユーザーーー問題）
- 4記事: コードブロック言語指定、空行追加、助詞重複・冗長表現のリライト
- 結果: markdownlint 37→0、textlint 69→0

--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -25,6 +25,12 @@
     "MD041": false,
     // Disable table column style (Zenn tables use compact style)
     "MD060": false,
+    // Zenn uses bare URLs on their own line for rich embeds (YouTube, Spotify, etc.)
+    "MD034": false,
+    // Zenn articles use bold text as sub-headings to avoid TOC pollution
+    "MD036": false,
+    // Shell prompt indicator ($) is conventional in Zenn bash code blocks
+    "MD014": false,
     // Allow non-standard heading style
     "MD003": {
       "style": "atx"
