--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lint-staged": "^16.2.7",
     "markdownlint-cli2": "^0.20.0",
     "textlint": "^14.3.1",
+    "textlint-filter-rule-comments": "^1.3.0",
     "textlint-rule-no-dead-link": "^6.2.1",
     "textlint-rule-preset-ja-technical-writing": "^10.0.1",
     "textlint-rule-prh": "^6.1.0",
