chore: docs/ と planning/ を gitignore に追加
内部運用メモ・戦略ドキュメントを公開リポジトリから除外

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,9 @@ Thumbs.db
 # Zenn CLI
 .zenn/
 
-# Drafts (working notes, not for publication)
+# Internal docs and planning (not for publication)
+docs/
+planning/
 drafts/
 
 # Reports (generated analysis, session-specific)
