--- a/scripts/pyproject.toml
+++ b/scripts/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "publish-cli"
 version = "0.1.0"
-description = "Zenn articles cross-post CLI (Qiita, LinkedIn)"
+description = "Zenn articles cross-post CLI (Qiita, Dev.to, Hashnode)"
 requires-python = ">=3.13"
 dependencies = [
     "httpx>=0.28.1",
